Fix default CSS sytling on Safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ a {
 	box-shadow: 1px 3px 16px #c5c5c5;
 }
 #form input{
+	-webkit-appearance: none;
 	display:inline-block;
 	float: left;
 	font-size: 16px;
